src/content/docs/sdk/ios/v4/features/privacy.mdx
---
title: Set up privacy features
description: Configure features that you can use to handle user privacy in your app.
slug: en/sdk/ios/v4/features/privacy
versions:
   - label: v5
     value: v5
     default: true
   - label: v4
     value: v4
redirects:
   v5: /en/sdk/ios/features/privacy
---

The Adjust SDK contains features that you can use to handle user privacy in your app.

## Send erasure request {#send-erasure-request}

<CodeBlock title="Method signature">

```objc
+ (void)gdprForgetMe;
```

</CodeBlock>

The EU’s General Data Protection Regulation (GDPR) and similar privacy laws worldwide (CCPA, LGPD, etc.) grant data subjects comprehensive rights when it comes to the processing of their personal data. These rights include, among others, the right to erasure (see [Art. 17 GDPR](https://gdpr.eu/article-17-right-to-be-forgotten/))([1](https://help.adjust.com/en/article/gdpr#ref-1)). As a data processor, Adjust is obliged to support you (the data controller) in the processing of such requests from your (app) users.

You can send the user's erasure request to Adjust by calling the `gdprForgetMe` method. Once Adjust has been notified:

-  Adjust will permanently delete all of the user’s historical personal data from its internal systems and database.
-  Adjust will no longer receive data from this user/device via the Adjust SDK.([2](https://help.adjust.com/en/article/gdpr#ref-2))

<Tabs>
<Tab title="Swift" sync="swift">

```swift
Adjust.gdprForgetMe();
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
[Adjust gdprForgetMe];
```

</Tab>
<Tab title="Javascript" sync="js">

```js
Adjust.gdprForgetMe();
```

</Tab>
</Tabs>

## Third-party sharing for specific users {#third-party-sharing-for-specific-users}

You can use the Adjust SDK to record when a user changes their third-party sharing settings. Third party sharing settings are configured using the `AdjustThirdPartySharing` class.

### Instantiate an AdjustThirdPartySharing object {#instantiate-an-adjustthirdpartysharing-object}

<CodeBlock title="Method signature">

```objc
- (nullable id)initWithIsEnabledNumberBool:(nullable NSNumber *)isEnabledNumberBool;
```

</CodeBlock>

To enable or disable third party sharing with the Adjust SDK, you need to instantiate an `AdjustThirdPartySharing` object. This object contains variables that control how third party sharing is handled by Adjust.

To instantiate a third party sharing object, create a new `AdjustThirdPartySharing` instance and pass the following parameters:

-  `isEnabled` (`NSNumber`): Whether third party sharing is enabled. Pass `1` to enable third party sharing or `0` to disable third party sharing

<Tabs>
<Tab title="Swift" sync="swift">

```swift
let adjustThirdPartySharing = ADJThirdPartySharing.initWithIsEnabledNumberBool(1)
Adjust.trackThirdPartySharing(adjustThirdPartySharing)
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
ADJThirdPartySharing *adjustThirdPartySharing = [[ADJThirdPartySharing alloc] initWithIsEnabledNumberBool:1];
[Adjust trackThirdPartySharing:adjustThirdPartySharing];
```

</Tab>
<Tab title="Javascript" sync="js">

```js
var adjustThirdPartySharing = new AdjustThirdPartySharing(1);
Adjust.trackThirdPartySharing(adjustThirdPartySharing);
```

</Tab>
</Tabs>

<Callout type="note">

If you set the `isEnabled` property to `0`, Adjust stops sharing the user's data with third parties. The Adjust SDK continues to work as expected.

</Callout>

Once you've instantiated your `AdjustThirdPartySharing` object, you can send the information to Adjust by calling the `Adjust.trackThirdPartySharing` method with your `AdjustThirdPartySharing` instance as an argument.

<Tabs>
<Tab title="Swift" sync="swift">

```swift
let adjustThirdPartySharing = ADJThirdPartySharing.initWithIsEnabledNumberBool(0)
Adjust.trackThirdPartySharing(adjustThirdPartySharing)
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
ADJThirdPartySharing *adjustThirdPartySharing = [[ADJThirdPartySharing alloc] initWithIsEnabledNumberBool:0];
[Adjust trackThirdPartySharing:adjustThirdPartySharing];
```

</Tab>
<Tab title="Javascript" sync="js">

```js
var adjustThirdPartySharing = new AdjustThirdPartySharing(0);
Adjust.trackThirdPartySharing(adjustThirdPartySharing);
```

</Tab>
</Tabs>

### Send granular information {#send-granular-information}

<CodeBlock title="Method signature">

```objc
- (void)addGranularOption:(nonnull NSString *)partnerName
                      key:(nonnull NSString *)key
                    value:(nonnull NSString *)value;
```

</CodeBlock>

You can attach granular information when a user updates their third-party sharing preferences. Use this information to communicate more detail about a user's decision. To do this, call the `addGranularOption` method with the following parameters:

-  `partnerName` (`NSString`): The name of the partner for whom the granular option applies.
-  `key` (`NSString`): The option key.
-  `value` (`NSString`): The option value.

The following partners are available:

<Table>

| Partner name            | String value                |
| ----------------------- | --------------------------- |
| AppleAds                | `apple_ads`                 |
| Facebook                | `facebook`                  |
| GoogleAds               | `adwords`                   |
| GoogleMarketingPlatform | `google_marketing_platform` |
| Snapchat                | `snapchat`                  |
| Tencent                 | `tencent`                   |
| TikTokSan               | `tiktok_san`                |
| X (formerly Twitter)    | `twitter`                   |
| YahooGemini             | `yahoo_gemini`              |
| YahooJapanSearch        | `yahoo_japan_search`        |

</Table>

<Tabs>
<Tab title="Swift" sync="swift">

```swift
let adjustThirdPartySharing = ADJThirdPartySharing.initWithIsEnabledNumberBool(nil)
adjustThirdPartySharing.addGranularOption("PartnerA", key: "foo", value: "bar")
Adjust.trackThirdPartySharing(adjustThirdPartySharing)
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
ADJThirdPartySharing *adjustThirdPartySharing = [[ADJThirdPartySharing alloc] initWithIsEnabledNumberBool:nil];
[adjustThirdPartySharing addGranularOption:@"PartnerA" key:@"foo" value:@"bar"];
[Adjust trackThirdPartySharing:adjustThirdPartySharing];
```

</Tab>
<Tab title="Javascript" sync="js">

```js
var adjustThirdPartySharing = new AdjustThirdPartySharing(null);
adjustThirdPartySharing.addGranularOption("PartnerA", "foo", "bar");
Adjust.trackThirdPartySharing(adjustThirdPartySharing);
```

</Tab>
</Tabs>

#### Manage Facebook Limited Data Use {#manage-facebook-limited-data-use}

<Callout type="important">

The Adjust SDK sends information to Facebook as soon as the app is installed. You need to make sure you call this method **before** initializing the SDK.

</Callout>

Facebook provides a feature called Limited Data Use (LDU) to comply with the California Consumer Privacy Act (CCPA). This feature enables you to notify Facebook when a California-based user is opted out of the sale of data. You can also use it if you want to opt all users out by default.

You can update the Facebook LDU status by passing the following arguments to the `addGranularOption` method:

<Table>

| Parameter                         | Description                                                                                                                                                                                         |
| --------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `partner_name`                    | Use `facebook` to toggle LDU.                                                                                                                                                                       |
| `data_processing_options_country` | The country in which the user is located.<ul><li>`0`: Request that Facebook use geolocation.</li><li>`1`: United States of America.</li></ul>                                                       |
| `data_processing_options_state`   | Notifies Facebook in which state the user is located.<ul><li>`0`: Request that Facebook use geolocation.</li><li>`1000`: California.</li><li>`1001`: Colorado</li><li>`1002`: Connecticut</li></ul> |

</Table>

<Callout type="note">

If you call this method with a `0` value for **either** `data_processing_options_country` or `data_processing_options_state`, the Adjust SDK passes **both** fields back as `0`.

</Callout>

<Tabs>
<Tab title="Swift" sync="swift">

```swift
let tps = ADJThirdPartySharing.initWithIsEnabledNumberBool(nil)
tps.addGranularOption("facebook", key: "data_processing_options_country", value: "1")
tps.addGranularOption("facebook", key: "data_processing_options_state", value: "1000")
Adjust.trackThirdPartySharing(tps)
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
ADJThirdPartySharing *tps = [[ADJThirdPartySharing alloc] initWithIsEnabledNumberBool:@YES];
[tps addGranularOption:@"facebook" key:@"data_processing_options_country" value:@"1"];
[tps addGranularOption:@"facebook" key:@"data_processing_options_state" value:@"1000"];
[Adjust trackThirdPartySharing:tps];
```

</Tab>
<Tab title="Javascript" sync="js">

```js
var tps = new AdjustThirdPartySharing(null);
tps.addGranularOption("facebook", "data_processing_options_country", "1");
tps.addGranularOption("facebook", "data_processing_options_state", "1000");
Adjust.trackThirdPartySharing(tps);
```

</Tab>
</Tabs>

<Callout type="note">

If you call this method with a `0` value for **either** `data_processing_options_country` or `data_processing_options_state`, the Adjust SDK passes **both** fields back as `0`.

</Callout>

#### Provide consent data to Google (Digital Markets Act compliance) {#provide-consent-data-to-google-digital-markets-act-compliance}

<Callout type="important">

Passing these options is required if you use Google Ads or Google Marketing Platform and have users located in the European Economic Area (EEA).

</Callout>

<MinorVersion added="v4.25.0">

To comply with the EU's Digital Markets Act (DMA), Google Ads and the Google Marketing Platform require explicit consent to receive Adjust’s attribution requests to their APIs. To communicate this consent, you need to add the following granular options to your third party sharing instance for the partner `google_dma`.

</MinorVersion>

<Table>

| Key                  | Value                            | Description                                                                                                                                                                                                             |
| -------------------- | -------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `eea`                | `1` (positive) \| `0` (negative) | Informs Adjust whether users installing the app are within the European Economic Area.<br />This includes EU member states, Switzerland, Norway, Iceland and Slovenia.                                                  |
| `ad_personalization` | `1` (positive) \| `0` (negative) | Informs Adjust whether users consented with being served personalized ads via Google Ads and/or Google Marketing Platform.<br />This parameter also informs the `npa` parameter reserved for Google Marketing Platform. |
| `ad_user_data`       | `1` (positive) \| `0` (negative) | Informs Adjust whether users consented with their advertiser ID being leveraged for attribution purposes.                                                                                                               |

</Table>

<Tabs>
<Tab title="Swift" sync="swift">

```swift
let adjustThirdPartySharing = ADJThirdPartySharing.initWithIsEnabledNumberBool(nil)
adjustThirdPartySharing.addGranularOption("google_dma", key: "eea", value: "1")
adjustThirdPartySharing.addGranularOption("google_dma", key: "ad_personalization", value: "1")
adjustThirdPartySharing.addGranularOption("google_dma", key: "ad_user_data", value: "1")
Adjust.trackThirdPartySharing(adjustThirdPartySharing)
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
ADJThirdPartySharing *adjustThirdPartySharing = [[ADJThirdPartySharing alloc] initWithIsEnabledNumberBool:nil];
[adjustThirdPartySharing addGranularOption:@"google_dma" key:@"eea" value:@"1"];
[adjustThirdPartySharing addGranularOption:@"google_dma" key:@"ad_personalization" value:@"1"];
[adjustThirdPartySharing addGranularOption:@"google_dma" key:@"ad_user_data" value:@"1"];
[Adjust trackThirdPartySharing:adjustThirdPartySharing];
```

</Tab>
</Tabs>

### Update partner sharing settings {#update-partner-settings}

<CodeBlock title="Method signature">

```objc
- (void)addPartnerSharingSetting:(nonnull NSString *)partnerName
                             key:(nonnull NSString *)key
                           value:(BOOL)value;
```

</CodeBlock>

By default, Adjust shares all metrics with any partners you've configured in your app settings. You can use the Adjust SDK to update your third party sharing settings on a per-partner basis. To do this, call the `addPartnerSharingSetting` method with the following arguments:

<Table autoWidth="1,2,3">

| Argument      | Data type | Description                                                                                                                                                                                                |
| ------------- | --------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `partnerName` | `String`  | The name of the partner. [Download the full list of available partners](https://assets.ctfassets.net/5s247im0esyq/2QQROOadVqJzrME7yXKObe/7aca25e53d38befb2d469809e62b6fcc/3rd-party-sharing-partners.xlsx) |
| `key`         | `String`  | The metric to share with the partner                                                                                                                                                                       |
| `value`       | `Boolean` | The user's decision                                                                                                                                                                                        |

</Table>

You can use the `key` to specify which metrics you want to disable or re-enable. If you want to enable/disable sharing all metrics, you can use the `all` key. The full list of available metrics is available below:

<ListColumns>

-  `ad_revenue`
-  `all`
-  `attribution`
-  `update`
-  `att_update`
-  `cost_update`
-  `event`
-  `install`
-  `reattribution`

---

-  `reattribution_reinstall`
-  `reinstall`
-  `rejected_install`
-  `rejected_reattribution`
-  `sdk_click`
-  `sdk_info`
-  `session`
-  `subscription`
-  `uninstall`

</ListColumns>

When you set a `false` value against a metric for a partner, Adjust stops sharing the metric with the partner.

<Callout type="tip">

If you only want to share a few metrics with a partner, you can pass the `all` key with a `false` value to disable all sharing and then pass individual metrics with a `true` value to limit what you share.

</Callout>

#### Examples {#examples}

If you want to stop sharing all metrics with a specific partner, pass the `all` key with a `false` value.

<Tabs>
<Tab title="Swift" sync="swift">

```swift
let adjustThirdPartySharing = ADJThirdPartySharing.initWithIsEnabledNumberBool(nil)
adjustThirdPartySharing.addPartnerSharingSetting("PartnerA", key: "all", value: false)
Adjust.trackThirdPartySharing(adjustThirdPartySharing)
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
ADJThirdPartySharing *adjustThirdPartySharing = [[ADJThirdPartySharing alloc] initWithIsEnabledNumberBool:nil];
[adjustThirdPartySharing addPartnerSharingSetting:@"PartnerA" key:@"all" value:@NO];
[Adjust trackThirdPartySharing:adjustThirdPartySharing];
```

</Tab>
<Tab title="Javascript" sync="js">

```js
var adjustThirdPartySharing = new AdjustThirdPartySharing(null);
adjustThirdPartySharing.addPartnerSharingSetting("PartnerA", "all", false);
Adjust.trackThirdPartySharing(adjustThirdPartySharing);
```

</Tab>
</Tabs>

To re-enable sharing, pass the `all` key with a `true` value.

<Tabs>
<Tab title="Swift" sync="swift">

```swift
let adjustThirdPartySharing = ADJThirdPartySharing.initWithIsEnabledNumberBool(nil)
adjustThirdPartySharing.addPartnerSharingSetting("PartnerA", key: "all", value: true)
Adjust.trackThirdPartySharing(adjustThirdPartySharing)
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
ADJThirdPartySharing *adjustThirdPartySharing = [[ADJThirdPartySharing alloc] initWithIsEnabledNumberBool:nil];
[adjustThirdPartySharing addPartnerSharingSetting:@"PartnerA" key:@"all" value:@YES];
[Adjust trackThirdPartySharing:adjustThirdPartySharing];
```

</Tab>
<Tab title="Javascript" sync="js">

```js
var adjustThirdPartySharing = new AdjustThirdPartySharing(null);
adjustThirdPartySharing.addPartnerSharingSetting("PartnerA", "all", true);
Adjust.trackThirdPartySharing(adjustThirdPartySharing);
```

</Tab>
</Tabs>

You can stop or start sharing specific metrics by calling the `addPartnerSharingSetting` method multiple times with different keys. For example, if you only want to share event information with a partner, you can pass:

-  `all` with a `false` value to disable sharing all information.
-  `event` with a `true` value to enable event sharing

<Callout type="note">

Specific keys always take priority over `all`. If you pass `all` with other keys, the individual key values override the `all` setting.

</Callout>

<Tabs>
<Tab title="Swift" sync="swift">

```swift
let adjustThirdPartySharing = ADJThirdPartySharing.initWithIsEnabledNumberBool(nil)
adjustThirdPartySharing.addPartnerSharingSetting("PartnerA", key: "all", value: false)
adjustThirdPartySharing.addPartnerSharingSetting("PartnerA", key: "event", value: true)
Adjust.trackThirdPartySharing(adjustThirdPartySharing)
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
ADJThirdPartySharing *adjustThirdPartySharing = [[ADJThirdPartySharing alloc] initWithIsEnabledNumberBool:nil];
[adjustThirdPartySharing addPartnerSharingSetting:@"PartnerA" key:@"all" value:@NO];
[adjustThirdPartySharing addPartnerSharingSetting:@"PartnerA" key:@"event" value:@YES];
[Adjust trackThirdPartySharing:adjustThirdPartySharing];
```

</Tab>
<Tab title="Javascript" sync="js">

```js
var adjustThirdPartySharing = new AdjustThirdPartySharing(null);
adjustThirdPartySharing.addPartnerSharingSetting("PartnerA", "all", false);
adjustThirdPartySharing.addPartnerSharingSetting("PartnerA", "event", true);
Adjust.trackThirdPartySharing(adjustThirdPartySharing);
```

</Tab>
</Tabs>

## Disable third-party sharing {#disable-third-party-sharing}

<CodeBlock title="Method signature">

```objc
+ (void)disableThirdPartySharing;
```

</CodeBlock>

To disable third-party sharing for all users, call the `disableThirdPartySharing` method. When Adjust's servers receive this information, Adjust stops sharing the user's data with third-parties. The Adjust SDK continues to work as expected.

<Tabs>
<Tab title="Swift" sync="swift">

```swift
Adjust.disableThirdPartySharing()
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
[Adjust disableThirdPartySharing];
```

</Tab>
<Tab title="Javascript" sync="js">

```js
Adjust.disableThirdPartySharing();
```

</Tab>
</Tabs>

## Data residency {#data-residency}

<CodeBlock title="Method signature">

```objc
@property (nonatomic, copy, readwrite, nullable) NSString *urlStrategy;
```

</CodeBlock>

The URL strategy feature allows you to set either:

-  The country in which Adjust stores your data (data residency).
-  The endpoint to which the Adjust SDK sends traffic (URL strategy).

This is useful if you're operating in a country with strict privacy requirements. When you set your URL strategy, Adjust stores data in the selected data residency region or sends traffic to the chosen domain.

To set your country of data residency, assign one of the following URL strategies to the `urlStrategy` property of your config instance.

<Table>

| Value                  | Description                                                                                                             |
| ---------------------- | ----------------------------------------------------------------------------------------------------------------------- |
| `ADJDataResidencyEU`   | Sets the area of data residency to the EU                                                                               |
| `ADJDataResidencyTR`   | Sets the area of data residency to Turkey                                                                               |
| `ADJDataResidencyUS`   | Sets the area of data residency to the USA                                                                              |
| `ADJUrlStrategyChina`  | Points the URL strategy to the `app.adjust.world` domain                                                                |
| `ADJUrlStrategyCn`     | Points the URL strategy to the `app.adjust.cn` domain                                                                   |
| `ADJUrlStrategyCnOnly` | Points the URL strategy to the `app.adjust.cn` domain but **doesn't** fall back to another domain if the request fails. |
| `ADJUrlStrategyIndia`  | Points the URL strategy to the `app.adjust.net.in` domain                                                               |

</Table>

<Tabs>
<Tab title="Swift" sync="swift">

```swift
let yourAppToken = "{YourAppToken}"
let environment = ADJEnvironmentSandbox as? String
let adjustConfig = ADJConfig(
   appToken: yourAppToken,
   environment: environment)
// ...
adjustConfig?.urlStrategy = ADJDataResidencyEU
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
NSString *yourAppToken = @"{YourAppToken}";
NSString *environment = ADJEnvironmentSandbox;
*adjustConfig = [ADJConfig configWithAppToken:yourAppToken
                           environment:environment];
// ...
[adjustConfig setUrlStrategy:ADJDataResidencyEU];
```

</Tab>
<Tab title="Javascript" sync="js">

```js
setupWebViewJavascriptBridge(function (bridge) {
   // ...
   var yourAppToken = yourAppToken;
   var environment = AdjustConfig.EnvironmentSandbox;
   var adjustConfig = new AdjustConfig(yourAppToken, environment);
   adjustConfig.setUrlStrategy(ADJDataResidencyEU);
});
```

</Tab>
</Tabs>

## Consent measurement for specific users {#consent-measurement-for-specific-users}

<CodeBlock title="Method signature">

```objc
+ (void)trackMeasurementConsent:(BOOL)enabled;
```

</CodeBlock>

If you're using [Data Privacy settings](https://help.adjust.com/en/article/manage-data-collection-and-retention) in your Adjust dashboard, you need to set up the Adjust SDK to work with them. This includes settings such as consent expiry period and user data retention period.

To toggle this feature, call the `trackMeasurementConsent` method with the following argument:

-  `measurementConsent` (`BOOL`): Whether consent measurement is enabled (`true`) or not (`false`).

When enabled, the SDK communicates the data privacy settings to Adjust's servers. Adjust's servers then applies your data privacy rules to the user. The Adjust SDK continues to work as expected.

<Tabs>
<Tab title="Swift" sync="swift">

```swift
Adjust.trackMeasurementConsent(true)
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
[Adjust trackMeasurementConsent:YES];
```

</Tab>
<Tab title="Javascript" sync="js">

```js
Adjust.trackMeasurementConsent(true);
```

</Tab>
</Tabs>

## COPPA compliance {#coppa-compliance}

<CodeBlock title="Method signature">

```java
public void setCoppaCompliantEnabled(boolean coppaCompliantEnabled)
```

</CodeBlock>

If you need your app to be compliant with the Children's Online Privacy Protection Act (COPPA), call the `[ADJConfig setCoppaCompliantEnabled]` method. This method performs the following actions:

1. Disables third-party sharing **before** the user launches their first `session`.
2. Prevents the SDK from reading device and advertising IDs (for example: `idfa`).

<Tabs>
<Tab title="Swift" sync="swift">

```swift
let yourAppToken = "{YourAppToken}"
let environment = ADJEnvironmentSandbox as? String
let adjustConfig = ADJConfig(
   appToken: yourAppToken,
   environment: environment)
adjustConfig?.coppaCompliantEnabled = true
Adjust.appDidLaunch(adjustConfig)
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
*adjustConfig = [ADJConfig configWithAppToken:@"{YourAppToken}"
                                 environment:ADJEnvironmentSandbox];
[adjustConfig coppaCompliantEnabled:YES];
[Adjust appDidLaunch:adjustConfig];
```

</Tab>
</Tabs>

You can disable COPPA compliance by calling this method with a `false` argument.

<Callout type="important">

Disabling the `setCoppaCompliantEnabled` method **doesn't** re-enable third-party sharing. You need to [re-enable third-party sharing](#third-party-sharing-for-specific-users) for the user.

</Callout>
